frontend/src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.primaryBackground {
  background-color: #212121;
  color: white;
  min-height: 93vh;
  text-align: center;
}

.secondaryBackground {
  background-color: #484848;
  color: white;
  text-align: center;
  border-radius: 10px;
  padding: 5px;
  align-content: center;
}

.NavBackground {
  background-color: #484848;
  color: white;
  text-align: center;
  padding: 5px;
  align-content: center;
  height: 7vh;
}

.formStyle {
  background-color: #484848 !important;
  color: white !important;
  width: 25vw !important;
  text-align: center !important;
  border-color: black !important;
}

